    - Use python 2.3 explicity.
  * Undo past changes of putting some modules in /usr/share. It was a
    violation of the FHS because the .py files are bytecompiled on
    installation. There are now a _LOT_ of lintian warnings about arch-indep
    files in /usr/lib, but this is the lesser evil.
  * Fix package description style to conform to some new lintian warnings.

 -- Brian Sutherland <jinty@web.de>  Thu, 25 Nov 2004 21:26:40 +0100

schooltool (0.7.99+0.8rc1-1) unstable; urgency=low

  * New upstream release: 0.8 release candidate 1.
  * Moved configuration file template to /usr/share (Policy 10.7.3).
  * Try to remove configuration file on purge (10.7.3).
  * Depend on ssl-cert rather than copy debconf templates at build.
    Be careful about handling unavailable templates in .config.
  * I18n of schooltool debconf templates with po-debconf.
  * Fixed bug where the ssl_certificate configuration option was not added
    to the configuration file if the certificate existed before installation.
  * Moved the persistent, zope, BTrees and ZDOB modules to /usr/lib and
    removed all links from /usr/share to /usr/lib.
  * Changed priority to extra.
  * Fixed rules so that binary-arch and binary-indep targets build the
    correct packages (Closes: Bug#279111).
  * On log rotation, only restart the server once and do not produce any
    output on success.
  * Changed dependency on python-tcpwrap from suggests to recommends.
  * Added database versioning code. If the database is thought to be
    incompatible, the user is asked in the preinst if it can be deleted.
  * Copy translation files (*.mo) into server package on package build.
  * Add release notes to packages.
  * Merge build the schoolbell package in this source package. The schoolbell
    source package will be removed from debian.
  * schooltool and schoolbell conflict and replace each other
    (Closes: Bug#281621).

 -- Brian Sutherland <jinty@web.de>  Wed, 13 Oct 2004 23:23:13 +0200
